# ZipFX

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  batch_translate.py  batch_translate_all.py  fill_translations.ps1  fill_translations.py  find_unfinished.py  output.txt  result.txt  test_extract.c  test_regex.py  translate_missing.py  translations_report.json
.claude/commands/: translate.md
.github/workflows/: release.yml
cmake/: FindBZip2.cmake  FindLZ4.cmake  FindLibLZMA.cmake  FindZstd.cmake
deploy/: build_linux.sh  build_mac.sh  build_win.cmd  installer.nsi
deploy/build_win/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
deploy/build_win/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
deploy/build_win/CPM_modules/: Find7-zip.cmake  Findghc_filesystem.cmake
deploy/build_win/ZipFX_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
deploy/build_win/ZipFX_autogen/YPKJ5OE7LN/: moc_CreateArchiveDialog.cpp  moc_CreateArchiveDialog.cpp.d  moc_FileListModel.cpp  moc_FileListModel.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
deploy/build_win/translations/: zipfx_ar.qm  zipfx_da.qm  zipfx_da.ts  zipfx_de.qm  zipfx_en.ts  zipfx_fi.qm  zipfx_fi.ts  zipfx_fr.qm  zipfx_it.qm  zipfx_ja.qm  zipfx_ja.ts  zipfx_ko.qm  zipfx_nl.qm  zipfx_nl.ts  zipfx_no.qm  zipfx_pt.qm  zipfx_ru.qm  zipfx_sv.qm  zipfx_sv.ts  zipfx_zh.qm  zipfx_zh.ts
deploy/test_install/translations/: zipfx_de.qm  zipfx_es.qm  zipfx_fr.qm  zipfx_it.qm  zipfx_ko.qm  zipfx_nl.qm  zipfx_sv.qm
lib/macos/: BUILD.md
locale/en/LC_MESSAGES/: ZipFX.mo  ZipFX.po
locale/es/LC_MESSAGES/: ZipFX.mo  ZipFX.po
poc_qt/: CMakeLists.txt  main.cpp
poc_qt/cmake/: FindZLIB.cmake
shellext/: CMakeLists.txt  ZipFXShellExt.cpp  ZipFXShellExt.h
src/: Info.plist.in  icons.h  main.cpp  version.h.in
src/assets/: README.txt  add.xpm  app.xpm  delete.xpm  extract.xpm  find.xpm  info.xpm  test.xpm  view.xpm  wizard.xpm
src/cli/: CliHandler.cpp  CliHandler.h
src/dnd/: DragProgressDialog.h  FuseArchiveMount.cpp  FuseArchiveMount.h  MacPromiseDrag.h  MacPromiseDrag.mm  TempCleanup.cpp  TempCleanup.h  VirtualFileDataObject.cpp  VirtualFileDataObject.h
src/engine/: AdfEngine.cpp  AdfEngine.h  ArchiveEngine.cpp  ArchiveEngine.h  ArchiveEngineFactory.cpp  ArchiveEngineFactory.h  ArchiveEntry.h  ArchiveExtensions.h  AtrEngine.cpp  AtrEngine.h  BigEngine.cpp  BigEngine.h  BinaryUtils.h  Bit7zEngine.cpp  Bit7zEngine.h  BrotliEngine.cpp  BrotliEngine.h  BsaEngine.cpp  BsaEngine.h  CabEngine.cpp  CabEngine.h  CdiEngine.cpp  CdiEngine.h  ChdEngine.cpp  ChdEngine.h  CpioEngine.cpp  CpioEngine.h  D64Engine.cpp  D64Engine.h  DmgEngine.cpp  DmgEngine.h  DskEngine.cpp  DskEngine.h  FatEngine.cpp  FatEngine.h  FileSignature.cpp  FileSignature.h  FlatArchiveEngine.cpp  FlatArchiveEngine.h  GameArchiveEngine.cpp  (+47 more)
src/recovery/: RecoveryRecord.cpp  RecoveryRecord.h
src/resources/: AppIcon.icns  app.rc  com.zipfx.app.metainfo.xml  net.krusher.zipfx.metainfo.xml  zipfx-mime.xml  zipfx.appdata.xml  zipfx.desktop
src/ui/: ArchiveProgress.cpp  ArchiveProgress.h  BatchOpsDialog.cpp  BatchOpsDialog.h  ChecksumsDialog.cpp  ChecksumsDialog.h  CreateArchiveDialog.cpp  CreateArchiveDialog.h  ExtractionProgressDialog.cpp  ExtractionProgressDialog.h  ExtractionWorker.cpp  ExtractionWorker.h  FileListModel.cpp  FileListModel.h  FileListPanel.cpp  FileListPanel.h  FindFilesDialog.cpp  FindFilesDialog.h  KeychainHelper.cpp  KeychainHelper.h  MainFrame.cpp  MainFrame.h  MainWindow.cpp  MainWindow.h  PasswordManagerDialog.cpp  PasswordManagerDialog.h  PowerManager.h  PreviewPanel.cpp  PreviewPanel.h  ProgressInfo.h
test_build/: _test_fix.c  _test_structure.c  _test_structure2.c
tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  tst_ArchiveEngineFactory.cpp  tst_Bit7zEngine.cpp  tst_CliHandler.cpp  tst_FileListModel.cpp  tst_FileSignature.cpp  tst_FlatArchiveEngines.cpp  tst_LibarchiveEngine.cpp  tst_ModEngine.cpp  tst_MpqEngine.cpp  tst_RarEngine.cpp  tst_TarGzEngine.cpp  tst_TempCleanup.cpp  tst_ZipEngine.cpp
tools/: gen_icons.py  po2mo.py  sync_translations.py
translations/: zipfx_ar.qm  zipfx_ar.ts  zipfx_da.qm  zipfx_da.ts  zipfx_de.ts  zipfx_en.ts  zipfx_es.qm  zipfx_es.ts  zipfx_fi.qm  zipfx_fi.ts  zipfx_fr.ts  zipfx_it.ts  zipfx_ja.qm  zipfx_ja.ts  zipfx_ko.ts  zipfx_nl.ts  zipfx_no.qm  zipfx_no.ts  zipfx_pt.qm  zipfx_pt.ts  zipfx_ru.qm  zipfx_ru.ts  zipfx_sv.ts  zipfx_zh.qm  zipfx_zh.ts
